--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="scroll">
     <header class="header">
         <nav>
-            <a href="/" class="logo"><img src="/img/logo-province-big.png" style="height: 2.5rem"alt=""></a>
+            <a href="/" class="logo"><img src="img/logo-province-big.png" style="height: 2.5rem"alt=""></a>
             <ul class="menu">
                 <li>
                     <a href="#">Home</a>
@@ -91,7 +91,7 @@
     <div class="sec-5">
         <div class="prof-1">
             <div class="profile-card">
-                <img src="/img/shane.jpg" alt="">
+                <img src="img/shane.jpg" alt="">
                 <div class="info">
                     <span>Shane Slater</span>
                     <span>DIRECTOR</span>
@@ -121,7 +121,7 @@
         </div>
         <div class="prof-2">
             <div class="profile-card">
-                <img src="/img/diana.jpg" alt="">
+                <img src="img/diana.jpg" alt="">
                 <div class="info">
                     <span>Diana Slater</span>
                     <span>RESIDENTIAL SALES</span>
@@ -317,7 +317,7 @@
         </p>
     </div>
     <footer class="center">
-        <a href="#" class="logo"><img src="/img/logo-province.png" alt=""></a>
+        <a href="#" class="logo"><img src="img/logo-province.png" alt=""></a>
         <br>
         <div class="foot1">
             <span><b>Shane Slater</b></span>
