--- a/index.html
+++ b/index.html
@@ -334,6 +334,6 @@
         </div>
         <br>
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
